@@ -10,8 +10,10 @@ apt (0.9.3) unstable; urgency=low
   * cmdline/apt-config.cc:
     - make it possible to limit dump to a subtree
     - implement --empty and --format option for dump
+  * apt-pkg/cdrom.cc:
+    - use Dump() to generate the configuration output
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 12:29:07 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sun, 22 Apr 2012 13:01:04 +0200
 
 apt (0.9.2) unstable; urgency=low
 
